RESOLVED FIXED209336
Fix for retrieving focus in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=209336
Summary Fix for retrieving focus in isolated tree mode.
Andres Gonzalez
Reported 2020-03-20 07:26:43 PDT
Fix for retrieving focus in isolated tree mode.
Attachments
Patch (6.55 KB, patch)
2020-03-20 07:44 PDT, Andres Gonzalez
no flags
Patch (6.55 KB, patch)
2020-03-20 10:32 PDT, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-03-20 07:44:15 PDT
chris fleizach
Comment 2 2020-03-20 10:27:05 PDT
Comment on attachment 394082 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=394082&action=review > Source/WebCore/ChangeLog:8 > + Focused object request can come on the secondary thread before the request > requests > Source/WebCore/ChangeLog:10 > + needs to generated the isolated tree if it doesn't exist, similar to generated > generate
Andres Gonzalez
Comment 3 2020-03-20 10:32:58 PDT
Andres Gonzalez
Comment 4 2020-03-20 10:34:47 PDT
(In reply to chris fleizach from comment #2) > Comment on attachment 394082 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=394082&action=review > > > Source/WebCore/ChangeLog:8 > > + Focused object request can come on the secondary thread before the > > request > requests Fixed. > > > Source/WebCore/ChangeLog:10 > > + needs to generated the isolated tree if it doesn't exist, similar to > > generated > generate Fixed. Thanks.
EWS
Comment 5 2020-03-20 11:50:06 PDT
Committed r258776: <https://trac.webkit.org/changeset/258776> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394100 [details].
Radar WebKit Bug Importer
Comment 6 2020-03-20 11:51:20 PDT
Note You need to log in before you can comment on or make changes to this bug.